# agentic-rag-001

./: .env  .env.example  .gitignore  README.md  pyproject.toml  rag_test_questions.txt  requirements.txt  response_tool_callings.json
app/: chat_history.py  chunking.py  embeddings.py  file_loader.py  main.py  pineconedb.py  postgres.py  postprocess.py  preprocessing.py  rag.py  schema.py  search.py  vectordb.py
app/function_calling/: tool_registry.py
app/mcp/: mcp_client.py  mcp_server_private.py  mcp_server_public.py
app/multi_ai_agents/: private_agent.py  public_agent.py  supervisor_agent.py
data/: architecture_firm.txt  consulting_firm.docx  consulting_firm.txt  corporate_law.md  intellectual_property.md  law_firm_intro.txt  legal_tips.html
outputs_sample/: response_chatmcp.json  response_multi_ai_agents.json
src/: main.py
src/agents/: mcp_client.py  supervisor_agent.py
src/agents/private/: mcp_server_private.py  private_agent.py
src/agents/public/: mcp_server_public.py  public_agent.py
src/core/: conversation_memory.py  embedding_generator.py  retriever.py  text_chunker.py
src/database/: knowledge_graph_builder.py  pineconedb.py  schema.py
src/functions_calling/: tool_registry.py
src/prompts/: conversation_prompts.py
src/utils/: clear_all_data.py  file_loader.py
utils/: clear_all_data.py
