[project]
name = "agentic-rag-001"
version = "0.1.0"
description = "A modular RAG pipeline for legal document search and Q&A, using semantic chunking, SBERT embeddings, Pinecone, and FastAPI."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "fastmcp>=2.12.4",
    "groq>=0.32.0",
    "hf-xet>=1.1.10",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.78",
    "langchain-experimental>=0.3.4",
    "langchain-groq>=0.3.8",
    "langchain-neo4j>=0.5.0",
    "langdetect>=1.0.9",
    "neo4j>=5.28.2",
    "nltk>=3.9.2",
    "numpy>=2.3.3",
    "pdfplumber>=0.11.7",
    "pinecone>=7.3.0",
    "pydantic>=2.12.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.1",
    "sympy>=1.14.0",
    "tavily-python>=0.7.12",
    "torch>=2.8.0",
    "uvicorn>=0.37.0",
]
